--- a/styles/style.css
+++ b/styles/style.css
@@ -86,6 +86,16 @@ footer {
 }
 
 footer p {
-    /* margin: 0; */
     padding: 4px;
+}
+
+main {
+    width: 1300px;
+    height: 390px;
+    position: absolute;
+    top: 350px;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    border-radius: 10px;
 }
