--- a/styles/style.css
+++ b/styles/style.css
@@ -34,11 +34,11 @@ nav li {
 
 nav a {
     text-decoration: none;
-    color: unset;
+    color: white;
 }
 
 nav a:active {
-    color: orange;
+    box-shadow: 2px 2px 10px orange;
 }
 
 nav a:hover {
