--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,7 @@ main {
     width: 1300px;
     height: 400px;
     position: relative;
+    overflow-x: scroll;
 }
 
 .article:nth-child(odd) {
@@ -135,4 +136,8 @@ main {
 .card {
     box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
+}
+
+.wrapper {
+    padding: 20px;
 }
