Create 'aside' element + Move content and aside into content-and-aside-wrapper

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -103,9 +103,13 @@ main {
     border-radius: 10px;
 }
 
-.content {
+.content-and-aside-wrapper {
     width: 400%;
     height: 400px;
+    display: flex;
+}
+
+.content {
     display: flex;
 }
 
