--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -90,7 +90,7 @@ footer p {
 }
 
 main {
-    width: 1300px;
+    width: 750px;
     height: 400px;
     position: absolute;
     top: 350px;
@@ -114,7 +114,7 @@ main {
 }
 
 .article {
-    width: 1300px;
+    width: 750px;
     height: 400px;
     position: relative;
     overflow-x: scroll;
@@ -154,4 +154,8 @@ main {
 
 h2, h3 {
     color: #29bb89;
+}
+
+table {
+    text-align: left;
 }
