--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -47,29 +47,38 @@ nav a:hover {
 
 nav {
     display: inline-block;
-    width: 77%;
+    width: 50%;
 }
 
 header {
     margin-top: 10px;
 }
 
-header div {
+header > div {
     float: right;
-    width: 23%;
-    margin-top: 50px;
+    width: 50%;
+    margin-top: 30px;
+    text-align: end;
 }
 
-header #website-title {
+.title-wrapper {
+    text-align: center;
+    display: inline;
+    float: right;
+    margin-right: 50px;
+}
+
+#website-title {
     font-family: "Gardening Font", Verdana, Tahoma, sans-serif;
     font-size: 60px;
     font-weight: bold;
     color: white;
-    display: inline;
-    line-height: 0%;
+    padding: 0;
+    margin: 0;
+    line-height: 50%;
 }
 
-header #small-website-description {
+#small-website-description {
     font-size: 16px;
     font-family: Descriptor;
     color: orange;
@@ -90,72 +99,73 @@ footer p {
 }
 
 main {
-    width: 750px;
+    width: 1200px;
     height: 400px;
     position: absolute;
     top: 350px;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: white;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
     background: transparent;
-    border-radius: 10px;
-}
-
-.content-and-aside-wrapper {
-    width: 400%;
-    height: 400px;
-    display: flex;
 }
 
 .content {
-    display: flex;
+    width: 65%;
+    height: 400px;
+    background: white;
+    float: left;
+    overflow-x: scroll;
 }
 
-.article {
-    width: 750px;
+aside {
+    width: 32%;
     height: 400px;
-    position: relative;
-    overflow-x: scroll;
-    background: white;
+    background: wheat;
+    float: right;
+}
+
+article {
+    width: 100%;
+    height: 100%;
+}
+
+article:nth-child(odd) {
+    background: lightgreen;
+}
+
+article:nth-child(even) {
+    background: lightblue;
+}
+
+.wrapper {
+    width: 300%;
+    height: 100%;
+    display: flex;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-.article > span {
-    position: relative;
-    display: block;
-}
+/* @media screen and (max-width: 513px) {
+    body {
+        display: flex;
+        flex-direction: column;
+    }
+    header {
+        display: flex;
+        flex-direction: column-reverse;
+        width: 100%;
+    }
 
-.card {
-    box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.3);
-    border-radius: 10px;
-}
+    nav {
+        display: block;
+        float: none;
+        width: 100%;
+    }
 
-.wrapper {
-    padding: 20px;
-}
-
-.article img {
-    width: 30%;
-    max-height: 300px;
-    object-fit: cover;
-    object-position: center;
-    float: left;
-    margin: 0 12px 12px 0;
-}
-
-.clear {
-    clear: left;
-}
-
-h2, h3 {
-    color: #29bb89;
-}
-
-table {
-    text-align: left;
-}
+    header > div {
+        display: block;
+        float: none;
+        width: 100%;
+    }
+} */
