--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -8,18 +8,19 @@
     src: url(Cool\ Cat.ttf);
 }
 
-* {
-    box-sizing: border-box;
-}
-
 body {
     margin: 0;
     padding: 0;
     background: #3f8938;
 }
 
-nav {
-    margin-top: 0px;
+* {
+    box-sizing: border-box;
+}
+
+header {
+    margin-top: 10px;
+    margin-bottom: 50px;
 }
 
 nav li {
@@ -46,12 +47,9 @@ nav a:hover {
 }
 
 nav {
+    margin-top: 0px;
     display: inline-block;
     width: 50%;
-}
-
-header {
-    margin-top: 10px;
 }
 
 header > div {
@@ -84,36 +82,25 @@ header > div {
     color: orange;
 }
 
-footer {
-    color: gray;
-    background-color: #e6dd3b;
-    text-align: center;
-    font-weight: bold;
-    position: fixed;
-    bottom: 0;
-    width: 100vw;
-}
-
-footer p {
-    padding: 4px;
-}
-
 main {
-    width: 1200px;
-    height: 400px;
-    position: absolute;
-    top: 350px;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    max-width: 85%;
     background: transparent;
+    margin: 0 auto;
+    overflow: auto;
+    border-radius: 10px;
 }
 
 .content {
     width: 65%;
     height: 400px;
-    background: white;
+    background: transparent;
     float: left;
     overflow-x: scroll;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
 }
 
 aside {
@@ -140,32 +127,87 @@ article:nth-child(even) {
     width: 300%;
     height: 100%;
     display: flex;
+    background: transparent;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-/* @media screen and (max-width: 513px) {
-    body {
-        display: flex;
-        flex-direction: column;
+footer > p {
+    margin-top: 30px;
+    margin-bottom: 0;
+    padding: 25px;
+    color: gray;
+    background-color: #e6dd3b;
+    text-align: center;
+    font-weight: bold;
+}
+
+@media screen and (max-width: 1000px) {
+    main {
+        height: 1680px;
+        margin: 0 auto;
+        overflow: auto;
     }
+    
+    .content {
+        width: 100%;
+        height: 1240px;
+        float: none;
+        overflow-x: unset;
+    }
+    
+    aside {
+        width: 100%;
+        height: 400px;
+        background: wheat;
+        float: none;
+        margin-top: 20px;
+    }
+
+    .wrapper {
+        width: 100%;
+        height: 400px;
+        display: block;
+        background: transparent;
+    }
+
+    .card {
+        margin-bottom: 20px;
+    }
+}
+
+@media screen and (max-width: 689px) {
     header {
+        margin-top: 10px;
+        margin-bottom: 50px;
         display: flex;
         flex-direction: column-reverse;
-        width: 100%;
     }
-
+    
     nav {
+        margin-top: 0px;
         display: block;
-        float: none;
         width: 100%;
     }
 
+    nav > ul {
+        text-align: center;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+    
     header > div {
-        display: block;
         float: none;
         width: 100%;
+        margin-top: 30px;
+        text-align: center;
     }
-} */
+    
+    .title-wrapper {
+        text-align: center;
+        display: inline;
+        float: none;
+    }
+}
