--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -12,6 +12,7 @@ body {
     margin: 0;
     padding: 0;
     background: #3f8938;
+    font-family: "Noto Serif", Arial, Helvetica, sans-serif;
 }
 
 * {
@@ -83,7 +84,7 @@ header > div {
 }
 
 main {
-    max-width: 85%;
+    max-width: 88%;
     background: transparent;
     margin: 0 auto;
     overflow: auto;
@@ -92,7 +93,7 @@ main {
 
 .content {
     width: 66%;
-    height: 400px;
+    height: 100%;
     background: transparent;
     float: left;
     overflow-x: scroll;
@@ -114,6 +115,7 @@ aside {
 article {
     width: 100%;
     height: 100%;
+    padding: 20px;
 }
 
 article:nth-child(odd) {
@@ -125,10 +127,17 @@ article:nth-child(even) {
 }
 
 .wrapper {
-    width: 300%;
+    width: 100%;
     height: 100%;
     display: flex;
     background: transparent;
+}
+
+.featured-image {
+    width: 100%;
+    max-height: 300px;
+    object-fit: cover;
+    object-position: center;
 }
 
 ::-webkit-scrollbar {
