Add Jenis-Jenis Kebun article using Javascript

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -98,6 +98,18 @@ main {
     float: left;
     overflow-x: scroll;
     scroll-behavior: smooth;
+    animation-name: fade-in;
+    animation-duration: 3s;
+}
+
+@keyframes fade-in {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
 
 .card {
