Turn the navigation text color to orange when selected

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -47,6 +47,10 @@ nav a:hover {
     color: orange;
 }
 
+.nav-selected {
+    color: orange;
+}
+
 nav {
     margin-top: 0px;
     display: inline-block;
