--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -106,9 +106,23 @@ main {
 
 aside {
     width: 32%;
-    height: 400px;
-    background: wheat;
+    height: 100%;
+    background: white;
     float: right;
+    padding: 0 20px 25px 20px;
+}
+
+aside > header {
+    text-align: center;
+    margin: 0;
+}
+
+aside img {
+    width: 100%;
+}
+
+aside section {
+    padding: 0 20px 0 20px;
 }
 
 .card {
@@ -120,7 +134,7 @@ article {
     width: 100%;
     height: 100%;
     padding: 25px;
-    background: lightgreen;
+    background: white;
     animation-name: fade-in;
     animation-duration: 3s;
 }
