--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -126,6 +126,16 @@ aside section {
     padding: 0 20px 0 20px;
 }
 
+aside > section > h3 {
+    text-align: center;
+}
+
+aside table {
+    padding: 0 auto;
+    margin: 0 auto;
+    text-align: left;
+}
+
 .card {
     box-shadow: 0 4px 8px 0px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
@@ -215,75 +225,3 @@ footer > p {
         width: 70%;
     }
 }
-
-/* @media screen and (max-width: 59px) {
-    
-} */
-
-/* @media screen and (max-width: 1000px) {
-    main {
-        height: 1680px;
-        margin: 0 auto;
-        overflow: auto;
-    }
-    
-    .content {
-        width: 100%;
-        height: 1240px;
-        float: none;
-        overflow-x: unset;
-    }
-    
-    aside {
-        width: 100%;
-        height: 400px;
-        background: wheat;
-        float: none;
-        margin-top: 20px;
-    }
-
-    .wrapper {
-        width: 100%;
-        height: 400px;
-        display: block;
-        background: transparent;
-    }
-
-    .card {
-        margin-bottom: 20px;
-    }
-}
-
-@media screen and (max-width: 689px) {
-    header {
-        margin-top: 10px;
-        margin-bottom: 50px;
-        display: flex;
-        flex-direction: column-reverse;
-    }
-    
-    nav {
-        margin-top: 0px;
-        display: block;
-        width: 100%;
-    }
-
-    nav > ul {
-        text-align: center;
-        padding-left: 15px;
-        padding-right: 15px;
-    }
-    
-    header > div {
-        float: none;
-        width: 100%;
-        margin-top: 30px;
-        text-align: center;
-    }
-    
-    .title-wrapper {
-        text-align: center;
-        display: inline;
-        float: none;
-    }
-} */
