--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -53,7 +53,7 @@ nav a:hover {
 }
 
 nav {
-    margin-top: 0px;
+    margin-top: 0;
     display: inline-block;
     width: 50%;
 }
@@ -101,8 +101,6 @@ main {
     height: 100%;
     background: transparent;
     float: left;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
 }
 
 aside {
@@ -191,18 +189,24 @@ footer > p {
 
 @media screen and (max-width: 1045px) {
     body > header {
-        display: flex;
-        flex-direction: column-reverse;
+        margin-bottom: 15px;
     }
 
     nav {
         width: 100%;
         text-align: center;
+        position: sticky;
+        top: 0;
+        /* background: #e6dd3b; */
     }
 
     body > header > div {
         width: 100%;
         float: none;
+    }
+
+    main {
+        overflow: visible;
     }
 
     .title-wrapper {
@@ -214,10 +218,14 @@ footer > p {
     .content {
         width: 100%;
         margin-bottom: 30px;
+        float: none;
     }
 
     aside {
         width: 100%;
+        float: none;
+        padding-top: 10px;
+        padding-bottom: 20px;
     }
 
     aside img {
